k8s/application/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-servie
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: postgres
